ハッシュタグにドットは使えないっぽい

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ exclude:
   - README.md
   - vendor
 google_analytics:
-hashtag: 田舎.fm
+hashtag: 田舎fm
 itunes_podcast_url:
 keywords: 
 language: ja
