--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ actors:
     url: https://twitter.com/mhidaka
 author: komatatsu
 description: 田舎から配信してます
-description_long: 田舎という文字列がゲシュタルト崩壊するまで続くやつ
+description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
 email: 
 exclude:
   - docker
