--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 actors:
   komatatsu:
-    image_url: /images/actors/alice.png
+    image_url: https://pbs.twimg.com/profile_images/877386238839275522/GdBI6N6E_200x200.jpg
     name: komatatsu
     url: https://twitter.com/k0matatsu
   mhidaka:
-    image_url: /images/actors/alice.png
+    image_url: https://pbs.twimg.com/profile_images/761384286624722944/OaJ9OeHA_200x200.jpg
     name: mhidaka
     url: https://twitter.com/mhidaka
 author: komatatsu
 description: 田舎から配信してます
 description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
-email: 
+email:
 exclude:
   - docker
   - docker-compose.yml
@@ -22,7 +22,7 @@ exclude:
 google_analytics:
 hashtag: 田舎fm
 itunes_podcast_url:
-keywords: 
+keywords:
 language: ja
 markdown: kramdown
 permalink: /episode/:title
