--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ exclude:
   - LICENSE.txt
   - README.md
   - vendor
-google_analytics:
+google_analytics: UA-116775910-1
 hashtag: 田舎fm
 itunes_podcast_url:
 keywords:
