よこまくさんを追加

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,10 @@ actors:
     image_url: /images/actors/laco.jpg
     name: laco2
     url: https://twitter.com/laco2net
+  yokoma:
+    image_url: /images/actors/yokoma.jpg
+    name: KeithYokoma
+    url: https://twitter.com/KeithYokoma
 author: komatatsu
 description: 田舎から配信してます
 description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
