--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ actors:
     image_url: /images/actors/yokoma.jpg
     name: KeithYokoma
     url: https://twitter.com/KeithYokoma
+  corocn:
+    image_url: /images/actors/corocn.jpg
+    name: ころちゃん
+    url: https://twitter.com/corocn
 author: komatatsu
 description: 田舎から配信してます
 description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
