--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,10 @@ actors:
     image_url: /images/actors/corocn.jpg
     name: ころちゃん
     url: https://twitter.com/corocn
+  kirimin:
+    image_url: /images/actors/kirimin.png
+    name: きりみんちゃん
+    url: https://kirimin-chan.site/
 author: komatatsu
 description: 田舎から配信してます
 description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
