画像の拡張子を間違えていたので修正

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ actors:
     name: きりみんちゃん
     url: https://kirimin-chan.site/
   fukuiretu:
-    image_url: /images/actors/fukuiretu.png
+    image_url: /images/actors/fukuiretu.jpg
     name: fukuiretu
     url: https://twitter.com/fukuiretu
 author: komatatsu
