--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ actors:
     image_url: /images/actors/fukuiretu.jpg
     name: fukuiretu
     url: https://twitter.com/fukuiretu
+  subroh_0508:
+    image_url: /images/actors/subroh_0508.jpg
+    name: subroh_0508
+    url: https://twitter.com/subroh_0508
 author: komatatsu
 description: 田舎から配信してます
 description_long: 田舎でリモートワークをしているAndroidエンジニアが配信しているpodcastです。ゲスト出演してくれる人をいつだって募集中、出演したいぞ〜という人は<a href=https://twitter.com/inaka_fm>@inaka_fm</a>にメンションしてくれよな！！
